<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".navPart.FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <EditText
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toTopOf="@id/container" />

        <EditText
            android:id="@+id/number_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/number"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@id/name_text"
            app:layout_constraintStart_toStartOf="@id/name_text"
            app:layout_constraintTop_toBottomOf="@id/name_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/to_second_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="25dp"
            android:background="@color/atmosware_color"
            android:text="@string/button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/first_to_activity_button"
            app:layout_constraintEnd_toEndOf="@id/number_text"
            app:layout_constraintStart_toStartOf="@id/number_text"
            app:layout_constraintTop_toBottomOf="@+id/number_text"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/first_to_activity_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@color/atmosware_color"
            android:text="@string/go_activity"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/to_second_button"
            app:layout_constraintStart_toStartOf="@id/to_second_button" />

        <TextView
            android:id="@+id/fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_fragment"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/container"
            app:layout_constraintEnd_toEndOf="@id/first_to_activity_button"
            app:layout_constraintTop_toBottomOf="@id/first_to_activity_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>